--- a/taixinkanghu/src/main/res/layout/fragment_select_age.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_age.xml
@@ -5,9 +5,11 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/age_titleLL"
         android:layout_width="match_parent"
-        android:layout_height="254dp"
-        android:background="@color/all_null">
+        android:layout_height="wrap_content"
+        android:background="@color/all_null"
+        android:orientation="vertical">
 
     </LinearLayout>
 
