--- a/taixinkanghu/src/main/res/layout/fragment_select_patient_state.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_patient_state.xml
@@ -8,7 +8,7 @@
 	<LinearLayout
 		android:id="@+id/patient_state_title_region"
 		android:layout_width="match_parent"
-		android:layout_height="500dp"
+		android:layout_height="wrap_content"
 		android:orientation="vertical">
 
 
