--- a/taixinkanghu/src/main/res/layout/activity_nurs_order_reviews.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order_reviews.xml
@@ -143,21 +143,19 @@
 
 					<LinearLayout
 						android:layout_width="match_parent"
-						android:layout_height="115dp"
+						android:layout_height="120dp"
 						android:layout_weight="1"
 						android:orientation="horizontal">
 
 						<LinearLayout
 							android:layout_width="match_parent"
 							android:layout_height="match_parent"
-							android:layout_marginTop="10dp"
 							android:layout_weight="1"
 							android:orientation="vertical">
 
-
 							<TextView
 								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
+								android:layout_height="30dp"
 								android:layout_marginLeft="70dp"
 								android:layout_weight="1"
 								android:gravity="center_vertical"
@@ -167,7 +165,7 @@
 
 							<TextView
 								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
+								android:layout_height="30dp"
 								android:layout_marginLeft="70dp"
 								android:layout_weight="1"
 								android:gravity="center_vertical"
@@ -177,7 +175,7 @@
 
 							<TextView
 								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
+								android:layout_height="30dp"
 								android:layout_marginLeft="70dp"
 								android:layout_weight="1"
 								android:gravity="center_vertical"
@@ -188,51 +186,41 @@
 
 						</LinearLayout>
 
-						<LinearLayout
-							android:layout_width="match_parent"
-							android:layout_height="match_parent"
-							android:layout_marginTop="10dp"
-							android:layout_weight="1"
-							android:orientation="vertical">
-
 
 							<RadioGroup
 								android:layout_width="match_parent"
 								android:layout_height="match_parent"
-								android:layout_marginTop="10dp"
 								android:layout_weight="1"
+								android:layout_marginTop="5dp"
+								android:layout_marginBottom="5dp"
 								android:orientation="vertical">
 
 								<RadioButton
 									style="@style/home_radio_button_style"
-									android:layout_width="20dp"
+									android:layout_width="27dp"
 									android:layout_height="20dp"
+									android:layout_marginTop="4.5dp"
+									android:layout_marginBottom="4.5dp"
+									android:layout_marginRight="15dp"
 									android:background="@drawable/bg_radio_button_tick"/>
-
-								<ImageView
-									android:layout_width="match_parent"
-									android:layout_height="10dp"/>
 
 								<RadioButton
 									style="@style/home_radio_button_style"
-									android:layout_width="20dp"
+									android:layout_width="27dp"
 									android:layout_height="20dp"
+									android:layout_marginTop="4.5dp"
+									android:layout_marginBottom="4.5dp"
+									android:layout_marginRight="15dp"
 									android:background="@drawable/bg_radio_button_tick"/>
-
-								<ImageView
-									android:layout_width="match_parent"
-									android:layout_height="10dp"/>
 
 								<RadioButton
 									style="@style/home_radio_button_style"
-									android:layout_width="20dp"
+									android:layout_width="27dp"
 									android:layout_height="20dp"
+									android:layout_marginTop="4.5dp"
+									android:layout_marginBottom="4.5dp"
+									android:layout_marginRight="15dp"
 									android:background="@drawable/bg_radio_button_tick"/>
-
-								<ImageView
-									android:layout_width="match_parent"
-									android:layout_height="10dp"/>
-
 
 							</RadioGroup>
 
@@ -259,7 +247,6 @@
 							<!--android:src="@drawable/btn_pay_select" />-->
 
 
-						</LinearLayout>
 
 					</LinearLayout>
 
