[modify]将橘色改为绿色

--- a/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_confirm_order.xml
@@ -643,7 +643,7 @@
 					android:gravity="right"
 					android:singleLine="true"
 					android:text="@string/total_price_text"
-					android:textColor="@color/text_color_orange"
+					android:textColor="@color/date_select_green"
 					android:textSize="14.0sp"/>
 			</LinearLayout>
 
@@ -675,7 +675,7 @@
 				android:layout_weight="1.0"
 				android:gravity="right"
 				android:singleLine="true"
-				android:textColor="@color/date_select_orange"
+				android:textColor="@color/date_select_green"
 				android:textSize="16.0sp"/>
 		</LinearLayout>
 
