--- a/taixinkanghu/src/main/res/layout/fragment_goods_info_page_one.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_goods_info_page_one.xml
@@ -43,7 +43,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/currency_symbol"
-			android:textColor="@color/text_color_orange"
+			android:textColor="@color/date_select_green"
 			android:textSize="20sp"/>
 
 		<TextView
@@ -51,7 +51,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:text="0"
-			android:textColor="@color/text_color_orange"
+			android:textColor="@color/date_select_green"
 			android:textSize="20sp"/>
 
 	</LinearLayout>
