--- a/taixinkanghu/src/main/res/layout/item_shopping_confirmation_order_goods.xml
+++ b/taixinkanghu/src/main/res/layout/item_shopping_confirmation_order_goods.xml
@@ -118,7 +118,7 @@
 					android:layout_gravity="center"
 					android:layout_marginLeft="15dp"
 					android:text="@string/postage_colon_text"
-					android:textColor="@color/text_color_orange"
+					android:textColor="@color/date_select_green"
 					android:textSize="18sp"/>
 
 				<TextView
@@ -126,7 +126,7 @@
 					android:layout_height="wrap_content"
 					android:layout_gravity="center"
 					android:text="@string/currency_symbol"
-					android:textColor="@color/text_color_orange"
+					android:textColor="@color/date_select_green"
 					android:textSize="18sp"/>
 
 				<TextView
@@ -134,7 +134,7 @@
 					android:layout_height="wrap_content"
 					android:layout_gravity="center"
 					android:text="@string/item_price"
-					android:textColor="@color/text_color_orange"
+					android:textColor="@color/date_select_green"
 					android:textSize="18sp"/>
 
 				<TextView
@@ -145,7 +145,7 @@
 					android:layout_weight="1"
 					android:gravity="right"
 					android:text="@string/subtotal_colon_text"
-					android:textColor="@color/text_color_orange"
+					android:textColor="@color/date_select_green"
 					android:textSize="18sp"/>
 
 				<TextView
@@ -153,7 +153,7 @@
 					android:layout_height="wrap_content"
 					android:layout_gravity="center"
 					android:text="@string/currency_symbol"
-					android:textColor="@color/text_color_orange"
+					android:textColor="@color/date_select_green"
 					android:textSize="18sp"/>
 
 				<TextView
@@ -162,7 +162,7 @@
 					android:layout_gravity="center"
 					android:layout_marginRight="15dp"
 					android:text="@string/item_price"
-					android:textColor="@color/text_color_orange"
+					android:textColor="@color/date_select_green"
 					android:textSize="18sp"/>
 
 			</LinearLayout>
