[modify] 解决点击输入框不弹出键盘的bug 解决点击输入框意外键盘不关闭的bug

--- a/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
+++ b/taixinkanghu/src/main/res/layout/activity_appointment_nursing.xml
@@ -98,6 +98,7 @@
 							</LinearLayout>
 
 							<LinearLayout
+								android:id="@+id/phone_num_region_ll"
 								android:layout_width="match_parent"
 								android:layout_height="40dp"
 								android:background="@drawable/bg_bule_frame_all"
