--- a/taixinkanghu/src/main/res/layout/activity_nurse_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurse_order.xml
@@ -69,11 +69,11 @@
 
 			</LinearLayout>
 
-			<android.support.v4.widget.SwipeRefreshLayout
-				android:id="@id/swipeRefreshLayout"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_weight="1.0">
+			<!--<android.support.v4.widget.SwipeRefreshLayout-->
+				<!--android:id="@id/swipeRefreshLayout"-->
+				<!--android:layout_width="match_parent"-->
+				<!--android:layout_height="match_parent"-->
+				<!--android:layout_weight="1.0">-->
 
 
 				<LinearLayout
@@ -85,7 +85,7 @@
 					android:orientation="vertical">
 
 					<ListView
-						android:id="@+id/lv_order_info"
+						android:id="@+id/order_info_lv"
 						android:layout_width="match_parent"
 						android:layout_height="match_parent"
 						android:layout_marginTop="5dp"
@@ -95,7 +95,7 @@
 					</ListView>
 				</LinearLayout>
 
-			</android.support.v4.widget.SwipeRefreshLayout>
+			<!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
 			<!--<include layout="@layout/item_order_info" />-->
 
