--- a/taixinkanghu/src/main/res/values/nurse_order_pay_page.xml
+++ b/taixinkanghu/src/main/res/values/nurse_order_pay_page.xml
@@ -2,4 +2,7 @@
 <resources>
 	<string name="title">支付页面</string>
 	<string name="pay">确认支付</string>
+	<string name="cancel_title">确定要放弃付款？</string>
+	<string name="cancel_btn">确定</string>
+	<string name="confirm_btn">取消</string>
 </resources>
