--- a/taixinkanghu/src/main/res/layout/activity_nurs_order_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order_info.xml
@@ -265,7 +265,6 @@
 							android:orientation="horizontal">
 
 							<TextView
-								android:id="@+id/worker_level"
 								android:layout_width="wrap_content"
 								android:layout_height="wrap_content"
 								android:text="级别："
@@ -324,7 +323,7 @@
 							android:textSize="16.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
+							android:id="@+id/service_price_all_day"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:text="250元"
@@ -332,7 +331,6 @@
 							android:textSize="18.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_marginLeft="5dp"
@@ -342,7 +340,7 @@
 							android:textSize="18.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
+							android:id="@+id/nurs_days_all_day"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_marginRight="15dp"
@@ -367,7 +365,7 @@
 							android:textSize="16.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
+							android:id="@+id/service_price_day"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:text="250元"
@@ -375,7 +373,6 @@
 							android:textSize="18.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_marginLeft="5dp"
@@ -385,7 +382,7 @@
 							android:textSize="18.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
+							android:id="@+id/nurs_days_day"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_marginRight="15dp"
@@ -410,7 +407,7 @@
 							android:textSize="16.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
+							android:id="@+id/service_price_night"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:text="250元"
@@ -418,7 +415,6 @@
 							android:textSize="18.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_marginLeft="5dp"
@@ -428,7 +424,7 @@
 							android:textSize="18.0sp"/>
 
 						<TextView
-							android:id="@+id/service_price"
+							android:id="@+id/nurs_days_night"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_marginRight="15dp"
