--- a/taixinkanghu/src/main/res/layout/fragment_goods_info.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_goods_info.xml
@@ -64,13 +64,13 @@
 		android:src="@drawable/goods_face_big"/>
 
 	<ImageView
-		android:id="@+id/goods_face_big"
+		android:id="@+id/goods_face_big_1"
 		android:layout_width="match_parent"
 		android:layout_height="300dp"
 		android:src="@drawable/goods_face_big"/>
 
 	<ImageView
-		android:id="@+id/goods_face_big"
+		android:id="@+id/goods_face_big_2"
 		android:layout_width="match_parent"
 		android:layout_height="300dp"
 		android:src="@drawable/goods_face_big"/>
