--- a/taixinkanghu/src/main/res/layout/activity_date_select.xml
+++ b/taixinkanghu/src/main/res/layout/activity_date_select.xml
@@ -127,26 +127,26 @@
 
 					<TextView
 						android:layout_width="wrap_content"
-						android:layout_height="match_parent"
+						android:layout_height="wrap_content"
 						android:layout_marginLeft="10dp"
 						android:gravity="center"
-						android:textSize="16sp"
+						android:textSize="14sp"
 						android:text="服务时间:"/>
 
 					<TextView
 						android:id="@+id/select_date_id"
 						android:layout_width="match_parent"
-						android:layout_height="match_parent"
+						android:layout_height="wrap_content"
 						android:layout_marginLeft="10dp"
 						android:layout_weight="1"
 						android:gravity="center"
-						android:textSize="16sp"
+						android:textSize="14sp"
 						android:text="选择服务时间"/>
 
 					<ImageView
 						android:id="@+id/down_date_img"
-						android:layout_width="20dp"
-						android:layout_height="20dp"
+						android:layout_width="16dp"
+						android:layout_height="16dp"
 						android:layout_gravity="center_vertical"
 						android:background="@mipmap/img_down"/>
 
